--- a/assets/css/templatemo-hexashop.css
+++ b/assets/css/templatemo-hexashop.css
@@ -223,6 +223,8 @@ header
   color: #1e1e1e!important;
 }
 
+.logo{width: 196; height: 95;}
+
 .background-header .main-nav .nav li:hover a {
   color: #2a2a2a!important;
 }
