--- a/assets/css/templatemo-hexashop.css
+++ b/assets/css/templatemo-hexashop.css
@@ -221,7 +221,7 @@ header
 .background-header .logo,
 .background-header .main-nav .nav li a {
   color: #1e1e1e!important;
-  width: 196; height: 95;
+  width: 196px; height: 95px;
 }
 
 /* .logo{width: 196; height: 95;} */
